Changed function Cisco for universal implementation.

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -45,7 +45,7 @@
 -->
   <li><label for="server">Server: </label>
   <select id='server' name="server">
-  <option disabled selected value>None</option>
+  <option disabled selected value></option>
       {% for i in server_queryset %}
           <option value={{ i.name }}>{{ i.name }} ({{ i.ip }})</option>
       {% endfor %}
