New APP logic **********************

--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -11,6 +11,7 @@
 <li><span style="font-weight: bold">Vendor:     </span>{{ instance.vendor.name }}</li>
 <li><span style="font-weight: bold">Device ip:  </span>{{ instance.ip.name }}</li>
 <li><span style="font-weight: bold">Device mac: </span>{{ instance.ap_mac }}</li>
+<li><span style="font-weight: bold">ACL (role): </span>{{ instance.acl }}</li>
 <li><span style="font-weight: bold">Auth scheme: </span>{{ instance.auth_scheme.name }}</li>
 {% if instance.status %}
 <li><span style="font-weight: bold">SSID status: </span>up</li>
