--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -59,13 +59,15 @@
 <!--<li><label for="name">IP: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" type="text" id="custom_server_ip" name="custom_server_ip"	 required></li>
 <li><span id="wrcharip" style="display:none;color:red;">Enter correct ssid name: ssid1,ssid2</span></li> -->
 </ul>
+
   <li><label for="group">Group: </label>
-<select size="5" id='group' name="group" multiple >
+  <select style='display:block' size="5" id='group' name="group" multiple >
       {% for i in group_queryset %}
           <option value={{ i.name }}>{{ i.name }}</option>
       {% endfor %}
   </select>
   </li>
+
 </ul>
 <input type="button" value='add' id="Add" onClick="add()" /> <br>
 <span id="novalues" style="display:none;color:red;list-style-type: none">Please select required values: Name,Vendor(or device),Server,Group</span>
