--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -60,13 +60,6 @@
 <li><span id="wrcharip" style="display:none;color:red;">Enter correct ssid name: ssid1,ssid2</span></li> -->
 </ul>
 
-  <li><label for="group">Group: </label>
-  <select style='display:block' size="5" id='group' name="group" multiple >
-      {% for i in group_queryset %}
-          <option value={{ i.name }}>{{ i.name }}</option>
-      {% endfor %}
-  </select>
-  </li>
 
 </ul>
 <input type="button" value='add' id="Add" onClick="add()" /> <br>
@@ -87,7 +80,6 @@ function add() {
     name = validateName()
     //name=document.getElementById('name').value;
     vendor = document.getElementById('vendor');
-    group=document.getElementById('group');
     vendor_selected_values = []
     device_selected_values = []
     server=validateCustomServerName()
@@ -100,13 +92,15 @@ function add() {
     for (var i = 0; i < device.selectedOptions.length; i++) {
         device_selected_values.push(device.selectedOptions[i].value)
     }
+
+
     console.log('name=' + name + ' ' + 'vendor=' + vendor_selected_values + 'device=' + device_selected_values + 'server=' + server);
     if (name.length > null && server.length > null && group.length > null) {
         console.log('Sending ajax')
      $.ajax({
             url : "/ssid_add/",
             type : "POST",
-            data : { name : name, vendor:JSON.stringify(vendor_selected_values),'csrfmiddlewaretoken': token,device:JSON.stringify(device_selected_values),server:server,auth_scheme:auth_scheme }, // data sent with the post request
+            data : { name : name, vendor:JSON.stringify(vendor_selected_values),'csrfmiddlewaretoken': token,device:JSON.stringify(device_selected_values),server:server }, // data sent with the post request
 
         // handle a successful response
 
@@ -116,7 +110,7 @@ function add() {
                 $("#wrcharhostname").fadeIn("slow").delay( 2000 ).fadeOut("slow");
             }
             else {
-                console.log('Success')
+                console.log(json.created_ssids)
             }
 
             //location.reload()
