New APP logic **********************

--- a/ssidswitcher1/static/stylesheet.css
+++ b/ssidswitcher1/static/stylesheet.css
@@ -334,7 +334,7 @@ ul.inside {
     border: 0;
 	width: 27px;
 	height: 27px;
-	background: url('images/settings1.png') top left no-repeat;
+	background: url('images/Settings1.png') top left no-repeat;
     background-position: center;
     background-size: 100% 100%;
 	cursor:pointer;
