--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -8,9 +8,7 @@
 
 <ul class="ssid-detail-list">
 <li><label for="name">Name: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" pattern="[A-Za-z1-9]+" type="text" id="name" name="name"	 required></li>
-<li><span id="wrchar" style="display:none;color:red;">Enter correct ssid name: ssid1,ssid2</span></li>
-
-
+<li><span id="wrchar" style="display:none;color:red;">Enter correct(unique per vendor) ssid name: ssid1,ssid2</span></li>
 
 
 
@@ -95,6 +93,9 @@ function add() {
             console.log(json.ssid_server_ip)
             if (json.ssid_server_ip !== undefined) {
                 $("#wrcharhostname").fadeIn("slow").delay( 2000 ).fadeOut("slow");
+            }
+            if (json.ssid_name_not_unique != undefined) {
+                $("#wrchar").fadeIn("slow").delay( 2000 ).fadeOut("slow");
             }
             else {
                 console.log(json.created_ssids)
