--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -9,7 +9,7 @@
 <ul class="ssid-detail-list">
 <li><label for="name">Name: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" pattern="[A-Za-z1-9]+" type="text" id="name" name="name"	 required></li>
 <li><span id="wrchar" style="display:none;color:red;">Enter correct(unique per vendor) ssid name: ssid1,ssid2</span></li>
-
+<span id="noname" style="display:none;color:red;list-style-type: none">Please enter ssid name</span>
 
 
 <li id="vendor_li"><label for="vendor">Devices: </label>
@@ -36,6 +36,7 @@
   </select>
 
   </li>
+<span id="noserver" style="display:none;color:red;list-style-type: none">Please select server</span>
 <li><label for="custom_server">Custom server</label><input type="checkbox" id="custom_server" name="custom" onclick="customServer(this)"></li>
 <ul id="custom_server_ul" style="display: none; padding-left: 0; list-style-type:none ;">
 <li><label for="name">Hostname: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" type="text" id="custom_server_name" name="custom_server_name"	 required></li>
@@ -48,7 +49,7 @@
 </ul>
 <div id="success" style="display: none;color:green;font-size: 26px; ">Success</div>
 <input type="button" value='add' id="Add" onClick="add()" /> <br>
-<span id="novalues" style="display:none;color:red;list-style-type: none">Please select required values: Name,Vendor(or device),Server,Group</span>
+
 {% csrf_token %}
 </form>
 <input class="link-to-main" type="button" onclick="location.href='/';"/>
@@ -81,7 +82,15 @@ function add() {
 
 
     //console.log('name=' + name + ' ' + 'vendor=' + vendor_selected_values + 'device=' + device_selected_values + 'server=' + server);
-    if (name.length > null && server.length > null) {
+    if (name.length === null ) {
+      $('#noname').fadeIn("slow").delay( 2000 ).fadeOut("slow");
+    }
+
+     if (name.length === null ) {
+      $('#noserver').fadeIn("slow").delay( 2000 ).fadeOut("slow");
+    }
+
+    else {
         console.log('Sending ajax')
      $.ajax({
             url : "/ssid_add/",
@@ -111,11 +120,7 @@ function add() {
         }
     })
 }
-     else {
-        console.log('Enter correct name or server values')
-        $('#novalues').fadeIn("slow").delay( 2000 ).fadeOut("slow");
 
-    }
 }
 
 function customDevice(element) {
