--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -83,10 +83,12 @@ function add() {
 
     //console.log('name=' + name + ' ' + 'vendor=' + vendor_selected_values + 'device=' + device_selected_values + 'server=' + server);
     if (name.length === null ) {
+        console.log('please enter ssid name')
       $('#noname').fadeIn("slow").delay( 2000 ).fadeOut("slow");
     }
 
-     if (name.length === null ) {
+     if (server.length === null ) {
+         console.log('please choose server')
       $('#noserver').fadeIn("slow").delay( 2000 ).fadeOut("slow");
     }
 
