New APP logic **********************

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -82,6 +82,7 @@ function add() {
 
 
     //console.log('name=' + name + ' ' + 'vendor=' + vendor_selected_values + 'device=' + device_selected_values + 'server=' + server);
+    console.log(name.length, server.length)
     if (name.length === null ) {
         console.log('please enter ssid name')
       $('#noname').fadeIn("slow").delay( 2000 ).fadeOut("slow");
