--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -88,7 +88,7 @@ function add() {
       $('#noname').fadeIn("slow").delay( 2000 ).fadeOut("slow");
     }
 
-     if (server.length === 0 ) {
+     else if (server.length === 0 ) {
          console.log('please choose server')
       $('#noserver').fadeIn("slow").delay( 2000 ).fadeOut("slow");
     }
