--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -44,7 +44,7 @@
 <!--<li><label for="name">IP: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" type="text" id="custom_server_ip" name="custom_server_ip"	 required></li>
 <li><span id="wrcharip" style="display:none;color:red;">Enter correct ssid name: ssid1,ssid2</span></li> -->
 </ul>
-<span id="noserver" style="display:none;color:red;list-style-type: none">Please select server</span>
+<span id="noserver" style="display:none;color:red;list-style-type: none">Please select or add server</span>
 
 
 </ul>
