New APP logic **********************

--- a/ssid/templates/add.html
+++ b/ssid/templates/add.html
@@ -7,7 +7,7 @@
 <form action="/">
 
 <ul class="ssid-detail-list">
-<li><label for="name">Name: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" pattern="[A-Za-z1-9]+" type="text" id="name" name="name"	 required></li>
+<li><label for="name">Name: </label><input style="width:120px;margin-left:auto;margin-right:auto;margin-bottom:5px;" pattern="[A-Za-z1-9]+" type="text" id="name" name="name"	maxlength="50" required></li>
 <li><span id="wrchar" style="display:none;color:red;">Enter correct(unique per vendor) ssid name: ssid1,ssid2</span></li>
 <span id="noname" style="display:none;color:red;list-style-type: none">Please enter ssid name</span>
 
