New APP logic ********************** Error exception changed

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -429,7 +429,7 @@ function run() {
                 //else {console.log('Not ready')}
             });
  } , 1000)
-
+/*
                check_error =  setInterval( function(){
                $.get("/ssid_error/", function(data) {
                    data=data.ssid_error_list
@@ -443,7 +443,24 @@ function run() {
                        }}
                 //else {console.log('No errors')}
             });
+ } , 1000)   */
+
+
+               check_error =  setInterval( function(){
+               $.get("/ssid_error/", function(data) {
+                   console.log('Some errors:'+data)
+               //    data=data.ssid_error_list
+               // if (data.length > null){
+               //    for(var i=0, n=data.length;i<n;i++) {
+               //        if (!ssid_error.includes(data[i])) {
+               //        $( "span."+data[i] ).html(data[i]+"<span style='color:red'>  fail  </span>").fadeIn("slow");
+               //        ssid_error.push(data[i])
+               //        }
+               //      }}
+
+         //   });
  } , 1000)
+
 
                //console.log('Next one')
            }
