--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -448,7 +448,7 @@ function run() {
 
                check_error =  setInterval( function(){
                $.get("/ssid_error/", function(data) {
-                   console.log('Some errors:'+data)
+                   console.log('Some errors:'+data.wcm_bred1_cisco)
                //    data=data.ssid_error_list
                // if (data.length > null){
                //    for(var i=0, n=data.length;i<n;i++) {
