--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -448,9 +448,8 @@ function run() {
 
                check_error =  setInterval( function(){
                $.get("/ssid_error/", function(data) {
-                   data=JSON.parse(data)
-                   console.log('Some errors:'+data)
-                   console.log(Object.keys(data).length )
+                   length = data.length();
+                   console.log(length)
                    if (Object.keys(data).length > null){
                    for(var i=0, n=data.length;i<n;i++) {
                        console.log(data[i])}
