Working on errors logic

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -450,12 +450,12 @@ function run() {
                $.get("/ssid_error/", function(data) {
                    length = data.length();
                    console.log(length)
-                   if (Object.keys(data).length > null){
-                   for(var i=0, n=data.length;i<n;i++) {
-                       console.log(data[i])}
+                   //if (Object.keys(data).length > null){
+                   //for(var i=0, n=data.length;i<n;i++) {
+                   //    console.log(data[i])}
 
 
-            }});
+            });
  } , 1000)
 
 
