--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -450,7 +450,7 @@ function run() {
                $.get("/ssid_error/", function(data) {
                    console.log(typeof(data))
                    result = JSON.parse(data)
-                   console.log(typeof(data)+data)
+                   console.log(typeof(result)+result)
                    //length = data.length();
                    //console.log(length)
                    //if (Object.keys(data).length > null){
