--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -448,9 +448,9 @@ function run() {
 
                check_error =  setInterval( function(){
                $.get("/ssid_error/", function(data) {
-                   console.log(typeof(data))
-                   result = JSON.parse(data)
-                   console.log(typeof(result)+result)
+                   console.log(data)
+                   //result = JSON.parse(data)
+                   //console.log(typeof(result)+result)
                    //length = data.length();
                    //console.log(length)
                    //if (Object.keys(data).length > null){
