--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -448,7 +448,10 @@ function run() {
 
                check_error =  setInterval( function(){
                $.get("/ssid_error/", function(data) {
-                   console.log(data.length)
+                   if (Object.keys(obj).length === 0) {
+                       console.log('Empty')
+                   }
+                   else {console.log(data)}
                    //result = JSON.parse(data)
                    //console.log(typeof(result)+result)
                    //length = data.length();
