--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -448,14 +448,15 @@ function run() {
 
                check_error =  setInterval( function(){
                $.get("/ssid_error/", function(data) {
-                   console.log(Object.keys(data).length)
                    if (Object.keys(data).length === 0) {
                        console.log('Empty')
                    }
                    else {
                        result=data.errors
+                       console.log(result)
                        for(var i in result) {
                        console.log('name='+result[i].name+'error'+result[i].error)}}
+
                    //result = JSON.parse(data)
                    //console.log(typeof(result)+result)
                    //length = data.length();
