--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -448,15 +448,13 @@ function run() {
 
                check_error =  setInterval( function(){
                $.get("/ssid_error/", function(data) {
-                   if (Object.keys(data).length === 0) {
-                       console.log('Empty')
-                   }
-                   else {
+                   if (Object.keys(data).length > 0) {
                        result=data.errors
-                       console.log(result)
                        for(var i in result) {
-                       console.log('name='+result[i].name+'error'+result[i].error)}}
-
+                          if (!ssid_error.includes(result[i].name)) {
+                          $( "span."+result[i].name ).html(result[i].name+"<span style='color:red'>" + result[i].error + "fail  </span>").fadeIn("slow");}
+                       ssid_error.push(result[i].name)
+                       }}
                    //result = JSON.parse(data)
                    //console.log(typeof(result)+result)
                    //length = data.length();
