--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -449,8 +449,10 @@ function run() {
                check_error =  setInterval( function(){
                $.get("/ssid_error/", function(data) {
                    if (Object.keys(data).length > 0) {
-                       result=data.errors
-                       for(var i in result) {
+                       result = data.errors.name
+                       console.log(result)
+                   }
+                     /*  for(var i in result) {
                           if (!ssid_error.includes(result[i].name)) {
                               $('#errors').fadeIn("slow").html(result[i].name+"<span style='color:red'>    " + result[i].error + "fail  </span>").delay(5000).fadeOut("slow")
                           $( "span."+result[i].name ).html(result[i].name+"<span style='color:red'>  fail  </span>").fadeIn("slow");
@@ -465,7 +467,7 @@ function run() {
                    //for(var i=0, n=data.length;i<n;i++) {
                    //    console.log(data[i])}
 
-
+ */
             });
  } , 1000)
 
