--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -453,7 +453,7 @@ function run() {
                        console.log(result)
 
                        for(var i in result) {
-                           console.log(i)
+                           console.log(result[i].name)
                           if (!ssid_error.includes(result[i].name)) {
                               $('#errors').fadeIn("slow").html(result[i].name+"<span style='color:red'>    " + result[i].error + "fail  </span>").delay(5000).fadeOut("slow")
                           $( "span."+result[i].name ).html(result[i].name+"<span style='color:red'>  fail  </span>").fadeIn("slow");
