--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -241,14 +241,8 @@ ip=[]
 ssid_status=[]
 ssid_error=[]
 
-//Check if ssid is busy
-$(document).ready(function(){
-    {% autoescape off %}
-    c={{ ssids_busy }}
-    {% endautoescape %}
-  if (c.length > null){
-    console.log(c,typeof(c),c.length)
-      check_busy =  setInterval( function(){
+
+check_busy =  setInterval( function(){
                $.get("/ssid_busy/", function(data) {
                    console.log('Check busy is working')
                    data = data.ssid_busy_list
@@ -258,20 +252,18 @@ $(document).ready(function(){
                        clearInterval(check_busy)
                        location.reload()
                    }
-                   //for (var i=0,n=c.length;i<n;i++) {
-                   //    $('#'+c[i]).prop("disabled", false);
-                       //if (!data.includes(c[i])) {
-                        //$( "span."+data[i] ).html(data[i]+"<span style='color:blue'>  ok  </span>").fadeIn("slow");
-                        //$('#'+c[i]).prop("disabled", false);
-                        //console.log('Changed status '+c[i])
-                        //}
-                       //else {
-                       // $( "span."+data[i] ).html(data[i]+"<span style='color:red'>  Busy  </span>").fadeIn("slow");
-                       // }
+               })},1000);
 
-                   //console.log('Ready')}
-                   //else {console.log('There is no busy ssids now!')}
-               })},1000)}})
+
+//Check if ssid is busy
+$(document).ready(function(){
+    {% autoescape off %}
+    c={{ ssids_busy }}
+    {% endautoescape %}
+  if (c.length > null){
+    console.log(c,typeof(c),c.length)
+  check_busy()
+  }})
 
 
 //update ssid_list
