--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -260,6 +260,7 @@ $(document).ready(function(){
     {% autoescape off %}
     c={{ ssids_busy }}
     {% endautoescape %}
+console.log(c)
   if (c.length > null){
     console.log(c,typeof(c),c.length)
   check_busy()
