Working on errors logic

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -366,7 +366,7 @@ function run() {
             success : function(json) {
             clearInterval(check_status)
             clearInterval(check_error)
-            clearInterval(check_busy)
+            //clearInterval(check_busy)
             ssidlist=JSON.stringify(json.all_up_ssids)   //all this array is one string element
             for (var i=0, n=ssid_status.length;i<n;i++) {
                 $( "span."+ssid_status[i] ).html(ssid_status[i]);
@@ -395,7 +395,7 @@ function run() {
             if (json.errors.length >null) {
                 $('#errors').fadeIn("slow").html('Connection timeout: ' + json.errors+'<br><span style="color:black">ask NOC for details.</span>').delay(5000).fadeOut("slow")
                 console.log('Connection timeout: ' + JSON.stringify(json.errors))
-                window.setTimeout(function(){location.reload()},7000)
+                //window.setTimeout(function(){location.reload()},7000)
             }
         },
 
