--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -395,7 +395,7 @@ function run() {
             if (json.errors.length >null) {
                 $('#errors').fadeIn("slow").html('Connection timeout: ' + json.errors+'<br><span style="color:black">ask NOC for details.</span>').delay(5000).fadeOut("slow")
                 console.log('Connection timeout: ' + JSON.stringify(json.errors))
-                //window.setTimeout(function(){location.reload()},7000)
+                window.setTimeout(function(){location.reload()},7000)
             }
         },
 
@@ -450,8 +450,8 @@ function run() {
                            console.log(result[i].name)
                           if (!ssid_error.includes(result[i].name)) {
                               $('#errors').fadeIn("slow").html(result[i].name+"<span style='color:red'>    " + result[i].error + "fail  </span>").delay(5000).fadeOut("slow")
-                          $( "span."+result[i].name ).html(result[i].name+"<span style='color:red'>  fail  </span>").fadeIn("slow");
-                          window.setTimeout(function(){location.reload()},7000)}
+                              $( "span."+result[i].name ).html(result[i].name+"<span style='color:red'>  fail  </span>").fadeIn("slow");
+                          //window.setTimeout(function(){location.reload()},7000)}
                        ssid_error.push(result[i].name)
                        }}
                    //result = JSON.parse(data)
