--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -450,7 +450,7 @@ function run() {
                            console.log(result[i].name)
                           if (!ssid_error.includes(result[i].name)) {
                               for (j in result[i].name ) {
-                                  console.log(j)
+                                  console.log('j='+j)
                               }
                               //$('#errors').fadeIn("slow").html(result[i].name + "<span style='color:red'>    " + result[i].error + "fail  </span>").delay(5000).fadeOut("slow")
                               //$("span." + result[i].name).html(result[i].name + "<span style='color:red'>  fail  </span>").fadeIn("slow");
