Working on errors logic

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -439,12 +439,12 @@ function run() {
             });
  } , 1000)   */
 
-
+/*
                check_error =  setInterval( function(){
                $.get("/ssid_error/", function(data) {
                    if (Object.keys(data).length > 0) {
                        result = data.errors
-                       console.log(result)
+                       //console.log(result)
 
                        for(var i in result) {
                            //console.log(result[i].name)
@@ -467,7 +467,7 @@ function run() {
 
 
             });
- } , 1000)
+ } , 1000)   */
 
 
                //console.log('Next one')
