Working on errors logic

--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -368,6 +368,7 @@ function run() {
             clearInterval(check_status)
             clearInterval(check_error)
             //clearInterval(check_busy)
+                console.log('ssid_error=',ssid_error)
             ssidlist=JSON.stringify(json.all_up_ssids)   //all this array is one string element
             for (var i=0, n=ssid_status.length;i<n;i++) {
                 $( "span."+ssid_status[i] ).html(ssid_status[i]);
