--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -374,7 +374,7 @@ function run() {
                 $( "span."+ssid_status[i] ).html(ssid_status[i]);
             }
             for (var i=0, n=ssid_error.length;i<n;i++) {
-                console.log('ssid_error=',ssid_error[i])
+                console.log('ssid_error=',ssid_error[i],i)
                 $( "span."+ssid_error[i] ).html(ssid_error[i]);
             }
             timer=30
