--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -461,7 +461,7 @@ function run() {
                           //window.setTimeout(function(){location.reload()},7000)}
                        ssid_error.push(result[i].name)
                        }
-                   console.log('ssid_error',ssid_error.length)
+                   console.log('ssid_error',ssid_error.length,ssid_error)
                    }
                    //result = JSON.parse(data)
                    //console.log(typeof(result)+result)
