--- a/ssid/templates/index.html
+++ b/ssid/templates/index.html
@@ -455,7 +455,7 @@ function run() {
                           if (!ssid_error.includes(result[i].name)) {
                               for (j=0;j<result[i].name.length;j++ ) {
                                console.log(result[i].name[j])
-                              $('#errors').fadeIn("slow").html(result[i].name[j] + "<span style='color:red'>    " + result[i].error + "fail  </span>").delay(5000).fadeOut("slow")
+                              //$('#errors').fadeIn("slow").html(result[i].name[j] + "<span style='color:red'>    " + result[i].error + "fail  </span>").delay(5000).fadeOut("slow")
                               $("span." + result[i].name[j]).html(result[i].name[j] + "<span style='color:red'>  fail  </span>").fadeIn("slow");
                           ssid_error.push(result[i].name[j])
                               }}
