--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -25,18 +25,27 @@
 
 <script language="JavaScript">
 {% autoescape off %}
-time={{ instance.remaining_time }},
+let time={{ instance.remaining_time }},
 {% endautoescape %}
-r=document.getElementById('r'),tmp=time;
-countdown_timer = setInterval(function(){
-var c=time--,m=(c/60)>>0,s=(c-m*60)+'';
-r.textContent=''+m+':'+(s.length>1?'':'0')+s
-tmp!=0||(tmp=time);
-if (time===0) {
-clearInterval(countdown_timer)
-location.reload();
-}
+r=document.getElementById('r');
+let countdown_timer = setInterval(function(){
+    let c=(time--)>0?time--:(clearInterval(countdown_timer),location.reload());
+    let m=(c/60)>>0;
+    let s=(c-m*60)+'';
+    r.textContent=''+m+':'+(s.length>1?'':'0')+s
 },1000);
+
+{#let countdown_timer = setInterval(function(){#}
+{#    let c=time--;#}
+{#    let m=(c/60)>>0;#}
+{#    let s=(c-m*60)+'';#}
+{#    r.textContent=''+m+':'+(s.length>1?'':'0')+s#}
+{#    tmp!=0||(tmp=time);#}
+{#    if (time===0) {#}
+{#        clearInterval(countdown_timer)#}
+{#        location.reload();#}
+{#    }#}
+
 
 </script>
 {% endblock %}
