--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -30,7 +30,8 @@ let time={{ instance.remaining_time }}
 {% endautoescape %}
 r=document.getElementById('r');
 let countdown_timer = setInterval(function(){
-    let c=(time>=1)?--time:(clearInterval(countdown_timer),location.reload());
+    let c=(time>1)?--time:(clearInterval(countdown_timer),location.reload());
+    console.log('Finished, c=');
     let m=(c/60)>>0;
     let s=(c-m*60)+'';
     r.textContent=''+m+':'+(s.length>1?'':'0')+s;
