--- a/ssid/templates/detail.html
+++ b/ssid/templates/detail.html
@@ -29,13 +29,16 @@ let time={{ instance.remaining_time }}
     console.log('Remaining time =',time)
 {% endautoescape %}
 r=document.getElementById('r');
+if (time > 1) {
 let countdown_timer = setInterval(function(){
-    let c=(time>1)?--time:(clearInterval(countdown_timer),location.reload());
-    console.log('Finished, c=');
+    let c=(time>1)?--time:(console.log('Finished1'),clearInterval(countdown_timer),location.reload());
     let m=(c/60)>>0;
     let s=(c-m*60)+'';
+    console.log('Finished2')
     r.textContent=''+m+':'+(s.length>1?'':'0')+s;
-},1000);
+},1000)
+    else {r.textContent=0};
+}
 
 {#let countdown_timer = setInterval(function(){#}
 {#    let c=time--;#}
